--- a/index.html
+++ b/index.html
@@ -6,12 +6,47 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=5" />
   <link rel="icon" href="./assets/devchallenges.png" />
   <link rel="shortcut icon" type="image/x-icon" href="https://devchallenges.io/" />
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500&display=swap" rel="stylesheet" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
+    integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <link
+    href="https://fonts.googleapis.com/css2?family=Crimson+Pro:wght@200&family=Lora:wght@500;700&family=Montserrat:wght@400;500;700&display=swap"
+    rel="stylesheet">
   <link rel="stylesheet" href="./style/style.css">
   <title>Interior Consultant</title>
 </head>
 
 <body>
+  <!-- Nav Bar Starts here -->
+  <nav>
+    <div>
+      <h4 class="nav-logo">This Interior</h4>
+    </div>
+    <div>
+      <i id="open-menu" class="fa-solid fa-bars responsive-menu-icon"></i>
+      <ul class="link-container">
+        <i id="close-menu" class="fa-solid fa-xmark responsive-close-menu-icon"></i>
+        <li class="link">Home</li>
+        <li class="link">Collection</li>
+        <li class="link">About</li>
+        <li class="link">Contact</li>
+      </ul>
+    </div>
+  </nav>
+  <!-- Nav Bar Ends Here -->
+  <!-- Main Section Starts Here -->
+  <main>
+    <div>
+      <h1 class="banner-title">Modern interior</h1>
+      <p class="banner-desc">A full-Service residential & commercial interior design and staging company offering professional organizing & eco-services.</p>
+      <p class="readmore-btn">Read more <i class="fa-solid fa-arrow-right"></i></p>
+    </div>
+    <div>
+      <img class="banner-img" src="./assets/photo1.png" alt="">
+    </div>
+  </main>
+  <footer>created by <a href="https://devchallenges.io/portfolio/Dodul01">Mozammel Hoque Dodul</a> - devChallenges.io</footer>
+  <!-- Main Section Ends Here -->
   <script src="./script/main.js"></script>
 </body>
 
