fixed layout problem

--- a/index.html
+++ b/index.html
@@ -41,8 +41,22 @@
       <p class="banner-desc">A full-Service residential & commercial interior design and staging company offering professional organizing & eco-services.</p>
       <p class="readmore-btn">Read more <i class="fa-solid fa-arrow-right"></i></p>
     </div>
-    <div>
+    <div class="banner-img-container">
       <img class="banner-img" src="./assets/photo1.png" alt="">
+      
+      <div class="card">
+        <div class="profile-details">
+          <div class="img-container">
+            <img class="profile-img" src="./assets/photo2.png" alt="">
+          </div>
+          <div>
+            <h4 class="profile-name">Aliza Webber</h4>
+            <p class="profile-position">Interior designer</p>
+          </div>
+        </div>
+        <h2>Designed in 2023 by <br> Aliza Webber</h2>
+      </div>
+    
     </div>
   </main>
   <footer>created by <a href="https://devchallenges.io/portfolio/Dodul01">Mozammel Hoque Dodul</a> - devChallenges.io</footer>
